Changes introduced by this commit are as follows: - (db models): Added models for notebooks and cells. - (server): Added methods for basic CRUD operations on notebooks and cells. - (client): Added a basic client for creating a notebook and cells and executing them.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.11"
 flask = "^2.2.3"
 protobuf = "^4.22.3"
 grpcio-tools = "^1.53.0"
+sqlalchemy = "^2.0.9"
+sqlalchemy-utils = "^0.41.0"
 
 
 [build-system]
