--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ protobuf = "^4.22.3"
 grpcio-tools = "^1.53.0"
 sqlalchemy = "^2.0.9"
 sqlalchemy-utils = "^0.41.0"
+redis = "^4.5.4"
 
 
 [build-system]
